Фикс конфигурационных файлов

--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -14,9 +14,13 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
 }
 
+test {
+    useTestNG()
+}
+
 task testGroups(type: Test) {
     useTestNG {
-        suites 'src/test/resources/testng-groups.xml'
+        suites 'src/test/resources/testng-contacts.xml'
     }
 }
 
@@ -25,3 +29,4 @@ task testContacts(type: Test) {
         suites 'src/test/resources/testng-contacts.xml'
     }
 }
+
