Добавил тест SoapTests в проект mantis-tests

--- a/mantis-tests/src/test/resources/local.properties
+++ b/mantis-tests/src/test/resources/local.properties
@@ -11,4 +11,6 @@ mailserver.port = 4555
 mailserver.adminlogin = root
 mailserver.adminpassword = root
 
-mail.pop3.host=localhost
+mail.pop3.host = localhost
+
+soap.url = http://localhost/mantisbt-1.2.20/api/soap/mantisconnect.php
