--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation 'org.subethamail:subethasmtp:3.1.7'
     implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.8'
     implementation 'ch.qos.logback:logback-classic:1.2.5'
+    implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
+    implementation 'org.hibernate:hibernate-core:5.5.6'
 }
 
 test {
