--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.2.5'
     implementation 'biz.futureware.mantis:mantis-axis-soap-client:1.2.19'
     implementation 'org.hibernate:hibernate-core:5.5.6'
+    implementation 'mysql:mysql-connector-java:8.0.26'
 }
 
 test {
