--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -30,6 +30,10 @@ task testGroups(type: Test) {
         systemProperty('browser', "${browser}")
     }
 
+    if (project.hasProperty('platform')) {
+        systemProperty('platform', "${platform}")
+    }
+
     if (project.hasProperty('target')) {
         systemProperty('target', "${target}")
     }
@@ -46,6 +50,10 @@ task testContacts(type: Test) {
 
     if (project.hasProperty('browser')) {
         systemProperty('browser', "${browser}")
+    }
+
+    if (project.hasProperty('platform')) {
+        systemProperty('platform', "${platform}")
     }
 
     if (project.hasProperty('target')) {
